[package]
name = "beatmap"
version = "0.1.0"
authors = [
    "Atlas Rhythm",
    "Raphaël Thériault <raphael_theriault@outlook.com>",
]
edition = "2018"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"

[dependencies.zip]
version = "0.5"
features = ["deflate", "time"]
default-features = false
optional = true

[features]
default = ["extras", "rw"]
extras = []
rw = ["zip"]
